Fix horizontal overflow on mobile width

--- a/style.css
+++ b/style.css
@@ -51,9 +51,8 @@ body {
         display: none;
     }
     .mainContent {
-        width:  80vw;
+        grid-column: 1/-1;
         padding: 0px 10px;
-        margin: 0 auto;   
     }
 
     .header {
